--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^2.0.14",
         "@vitejs/plugin-vue": "^6.0.0"
     }
